--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bevy-test"
+name = "simple-calc"
 version = "0.1.0"
 authors = ["Pravin Kumar <pravinshanmugam1995@gmail.com>"]
 edition = "2018"
