--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -225,12 +225,12 @@ jobs:
             name: ${{ github.event.repository.name }}-Apple-aarch64-apple-ios.tar.gz
             skip_tests: true
 
-# Unable to locate package alsa-lib-devel.aarch64
-          - os_name: aarch64-linux-android
-            os: ubuntu-22.04
-            target: aarch64-linux-android
-            bin: ${{ github.event.repository.name }}
-            name: ${{ github.event.repository.name }}-aarch64-linux-android.tar.gz
+# Failed to find tool. Is `aarch64-linux-android-clang++` installed?
+#           - os_name: aarch64-linux-android
+#             os: ubuntu-22.04
+#             target: aarch64-linux-android
+#             bin: ${{ github.event.repository.name }}
+#             name: ${{ github.event.repository.name }}-aarch64-linux-android.tar.gz
 
 # # failed to run custom build command for `bevy-glsl-to-spirv v0.2.1`
 # # could not find system library 'alsa' required by the 'alsa-sys' crate
