--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -34,11 +34,26 @@ jobs:
 #             bin: ${{ github.event.repository.name }}
 #             name: ${{ github.event.repository.name }}-x86_64-unknown-linux-musl.tar.gz
 
-          - os_name: Linux-x86_64-gnu
-            os: ubuntu-20.04
-            target: x86_64-unknown-linux-gnu
-            bin: ${{ github.event.repository.name }}
-            name: ${{ github.event.repository.name }}-x86_64-unknown-linux-gnu.tar.gz
+# /home/runner/.cargo/registry/src/index.crates.io-6f17d22bba15001f/wgpu-core-0.7.1/src/device/mod.rs:1529:26
+#      |
+# 1516 |         let mut desc_set = desc_sets.pop().unwrap();
+#      |             ------------ binding `desc_set` declared here
+# ...
+# 1529 |                     set: desc_set.raw_mut(),
+#      |                          ^^^^^^^^^^^^^^^^^^ borrowed value does not live long enough
+# ...
+# 1549 |     }
+#      |     -
+#      |     |
+#      |     `desc_set` dropped here while still borrowed
+#      |     borrow might be used here, when `write_map` is dropped and runs the `Drop` code for type `BTreeMap`
+#      |
+#      = note: values in a scope are dropped in the opposite order they are defined
+#           - os_name: Linux-x86_64-gnu
+#             os: ubuntu-20.04
+#             target: x86_64-unknown-linux-gnu
+#             bin: ${{ github.event.repository.name }}
+#             name: ${{ github.event.repository.name }}-x86_64-unknown-linux-gnu.tar.gz
 
 #           - os_name: Linux-i686-musl
 #             os: ubuntu-20.04
