--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -232,13 +232,13 @@ jobs:
     strategy:
       matrix:
         platform:
-# cannot find value `kAudioDevicePropertyBufferFrameSize` in crate `sys`
-          - os_name: IOS-aarch64
-            os: macos-12
-            target: aarch64-apple-ios
-            bin: ${{ github.event.repository.name }}
-            name: ${{ github.event.repository.name }}-Apple-aarch64-apple-ios.tar.gz
-            skip_tests: true
+# failed to run custom build command for `shaderc-sys v0.7.4`
+#           - os_name: IOS-aarch64
+#             os: macos-12
+#             target: aarch64-apple-ios
+#             bin: ${{ github.event.repository.name }}
+#             name: ${{ github.event.repository.name }}-Apple-aarch64-apple-ios.tar.gz
+#             skip_tests: true
 
 # Failed to find tool. Is `aarch64-linux-android-clang++` installed?
 #           - os_name: aarch64-linux-android
@@ -248,15 +248,13 @@ jobs:
 #             name: ${{ github.event.repository.name }}-aarch64-linux-android.tar.gz
 
 # # failed to run custom build command for `bevy-glsl-to-spirv v0.2.1`
-# # could not find system library 'alsa' required by the 'alsa-sys' crate
 #           - os_name: Linux-aarch64
 #             os: ubuntu-20.04
 #             target: aarch64-unknown-linux-gnu
 #             bin: ${{ github.event.repository.name }}
 #             name: ${{ github.event.repository.name }}-aarch64-unknown-linux-gnu.tar.gz
 
-# # failed to run custom build command for `bevy-glsl-to-spirv v0.2.1`
-# # minimp3/minimp3.h(187): fatal error C1189: #error:  MINIMP3_ONLY_SIMD used, but SSE/NEON not enabled          
+# # failed to run custom build command for `bevy-glsl-to-spirv v0.2.1`         
 #           - os_name: Windows-aarch64
 #             os: windows-latest
 #             target: aarch64-pc-windows-msvc
