--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -34,26 +34,11 @@ jobs:
 #             bin: ${{ github.event.repository.name }}
 #             name: ${{ github.event.repository.name }}-x86_64-unknown-linux-musl.tar.gz
 
-# /home/runner/.cargo/registry/src/index.crates.io-6f17d22bba15001f/wgpu-core-0.7.1/src/device/mod.rs:1529:26
-#      |
-# 1516 |         let mut desc_set = desc_sets.pop().unwrap();
-#      |             ------------ binding `desc_set` declared here
-# ...
-# 1529 |                     set: desc_set.raw_mut(),
-#      |                          ^^^^^^^^^^^^^^^^^^ borrowed value does not live long enough
-# ...
-# 1549 |     }
-#      |     -
-#      |     |
-#      |     `desc_set` dropped here while still borrowed
-#      |     borrow might be used here, when `write_map` is dropped and runs the `Drop` code for type `BTreeMap`
-#      |
-#      = note: values in a scope are dropped in the opposite order they are defined
-#           - os_name: Linux-x86_64-gnu
-#             os: ubuntu-20.04
-#             target: x86_64-unknown-linux-gnu
-#             bin: ${{ github.event.repository.name }}
-#             name: ${{ github.event.repository.name }}-x86_64-unknown-linux-gnu.tar.gz
+          - os_name: Linux-x86_64-gnu
+            os: ubuntu-20.04
+            target: x86_64-unknown-linux-gnu
+            bin: ${{ github.event.repository.name }}
+            name: ${{ github.event.repository.name }}-x86_64-unknown-linux-gnu.tar.gz
 
 #           - os_name: Linux-i686-musl
 #             os: ubuntu-20.04
@@ -247,20 +232,20 @@ jobs:
 #             bin: ${{ github.event.repository.name }}
 #             name: ${{ github.event.repository.name }}-aarch64-linux-android.tar.gz
 
-# # failed to run custom build command for `bevy-glsl-to-spirv v0.2.1`
-#           - os_name: Linux-aarch64
-#             os: ubuntu-20.04
-#             target: aarch64-unknown-linux-gnu
-#             bin: ${{ github.event.repository.name }}
-#             name: ${{ github.event.repository.name }}-aarch64-unknown-linux-gnu.tar.gz
+# failed to run custom build command for `bevy-glsl-to-spirv v0.2.1`
+          - os_name: Linux-aarch64
+            os: ubuntu-20.04
+            target: aarch64-unknown-linux-gnu
+            bin: ${{ github.event.repository.name }}
+            name: ${{ github.event.repository.name }}-aarch64-unknown-linux-gnu.tar.gz
 
-# # failed to run custom build command for `bevy-glsl-to-spirv v0.2.1`         
-#           - os_name: Windows-aarch64
-#             os: windows-latest
-#             target: aarch64-pc-windows-msvc
-#             bin: ${{ github.event.repository.name }}.exe
-#             name: ${{ github.event.repository.name }}-aarch64-pc-windows-msvc.zip
-#             skip_tests: true
+# failed to run custom build command for `bevy-glsl-to-spirv v0.2.1`         
+          - os_name: Windows-aarch64
+            os: windows-latest
+            target: aarch64-pc-windows-msvc
+            bin: ${{ github.event.repository.name }}.exe
+            name: ${{ github.event.repository.name }}-aarch64-pc-windows-msvc.zip
+            skip_tests: true
             
           - os_name: macOS-aarch64
             os: macos-12
